Endpoint para listar classes, turmas e alunos com basse a classe ou turmas

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost\\Sysgest;Initial Catalog=CAT;User Id=sa;Password=1234qwer.;TrustServerCertificate=true;",
+    "DefaultConnection": "Server=DEV-01\\SYSGEST;Database=CEPI;User Id=sa;Password=1234qwer.;",
+    "DefaultConnection--SS": "Data Source=localhost\\Sysgest;Initial Catalog=CAT;User Id=sa;Password=1234qwer.;TrustServerCertificate=true;",
     "ServerConnection": "Data Source=192.168.0.13\\Sysgest;Initial Catalog=CAT;User Id=sa;Password=1234qwer.;TrustServerCertificate=true;"
   },
   "Logging": {
