--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Server=DEV-01\\SYSGEST;Database=CEPI;User Id=sa;Password=1234qwer.;",
-    "DefaultConnection--SS": "Data Source=localhost\\Sysgest;Initial Catalog=CAT;User Id=sa;Password=1234qwer.;TrustServerCertificate=true;",
-    "ServerConnection": "Data Source=192.168.0.13\\Sysgest;Initial Catalog=CAT;User Id=sa;Password=1234qwer.;TrustServerCertificate=true;"
+    "DefaultConnection-s4": "Data Source=localhost\\Sysgest;Initial Catalog=CAT;User Id=sa;Password=1234qwer.;TrustServerCertificate=true;",
+    "DefaultConnection--ss": "Server=192.168.160.200\\SYSGEST;Initial Catalog=CEPI;User Id=sa;Password=1234qwer.;TrustServerCertificate=True"
   },
   "Logging": {
   }
